# tonic-sample

./: Cargo.toml  README.md
proto/: timeseries.proto
src/: main.rs
src/client/: client.rs
