[package]
name = "tonic-sample"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1.3"
log = "0.4.11"
fst = "0.4"
rand = "0.7.3"
fasthash = "0.4.0"
prost = "0.8"
local_ipaddress = "0.1.3"


tonic = {version = "0.5.2", features = ["tls", "compression"]}
hyper = { version = "0.14", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost", "compression"] }
